--- a/sdkjs-plugins/content/textcleaner/config.json
+++ b/sdkjs-plugins/content/textcleaner/config.json
@@ -39,6 +39,10 @@
       "initData": "",
       "isUpdateOleOnResize": false,
       "size": [300, 450],
+      "events": [
+        "onContextMenuShow",
+        "onContextMenuClick"
+      ],
       "store": {
         "background": {
 					"light" : "#042B48",
@@ -55,7 +59,27 @@
     {
       "description": "About",
       "url": "index_about.html",
-      "icons": [],
+      "icons": [
+        {
+          "theme": "flat",
+          "style": "light",
+          "100%": { "normal": "resources/light/icon.svg" },
+          "125%": { "normal": "resources/light/icon@1.25x.svg" },
+          "150%": { "normal": "resources/light/icon@1.5x.svg" },
+          "175%": { "normal": "resources/light/icon@1.75x.svg" },
+          "200%": { "normal": "resources/light/icon@2x.svg" },
+          "default": { "normal": "resources/light/icon.svg" }
+        },
+        {
+          "theme": "flatDark",
+          "style": "dark",
+          "100%": { "normal": "resources/dark/icon.svg" },
+          "125%": { "normal": "resources/dark/icon@1.25x.svg" },
+          "150%": { "normal": "resources/dark/icon@1.5x.svg" },
+          "175%": { "normal": "resources/dark/icon@1.75x.svg" },
+          "200%": { "normal": "resources/dark/icon@2x.svg" }
+        }
+      ],
       "isViewer": false,
       "EditorsSupport": ["word"],
       "isVisual": true,
@@ -71,6 +95,41 @@
         }
       ],
       "size": [380, 200]
+    },
+    {
+      "description": "Text Cleaner Background ContextMenu",
+      "url": "ctx.html",
+      "icons": [
+        {
+          "theme": "flat",
+          "style": "light",
+          "100%": { "normal": "resources/light/icon.svg" },
+          "125%": { "normal": "resources/light/icon@1.25x.svg" },
+          "150%": { "normal": "resources/light/icon@1.5x.svg" },
+          "175%": { "normal": "resources/light/icon@1.75x.svg" },
+          "200%": { "normal": "resources/light/icon@2x.svg" },
+          "default": { "normal": "resources/light/icon.svg" }
+        },
+        {
+          "theme": "flatDark",
+          "style": "dark",
+          "100%": { "normal": "resources/dark/icon.svg" },
+          "125%": { "normal": "resources/dark/icon@1.25x.svg" },
+          "150%": { "normal": "resources/dark/icon@1.5x.svg" },
+          "175%": { "normal": "resources/dark/icon@1.75x.svg" },
+          "200%": { "normal": "resources/dark/icon@2x.svg" }
+        }
+      ],
+      "isViewer": false,
+      "EditorsSupport": ["word"],
+      "isVisual": false,
+      "isModal": false,
+      "isInsideMode": false,
+      "isSystem": false,
+      "events": [
+        "onContextMenuShow",
+        "onContextMenuClick"
+      ]
     }
   ]
 } 
